fixed horizontal scroll bar occuring on slides

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     font-family: sans-serif;
 }
@@ -37,7 +37,7 @@ html, body {
 
 .slide {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     scroll-snap-align: start;
     overflow: hidden;
